feat(navigation) : Add a nav bar in our html page to navigate between our pages

--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,48 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>CSS/HTML Workshop with Convargo</title>
-  </head>
-  <body>
-    <div id="trucker">
-      <input class="name" type="text" placeholder="Trucker name"/>
-      <input class="price-by-km" type="number" placeholder="Price by km"/>
-      <input class="price-by-cubic" type="number" placeholder="Price by m3"/>
+
+<head>
+  <title>Convargo</title>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+  <!-- Latest compiled JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+  <nav class="navbar navbar-default">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Convargo</a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
     </div>
-    <div id="shipper">
-      <input class="name" type="text" placeholder="Shipper name"/>
-      <input class="distance" type="number" placeholder="Distance in km"/>
-      <input class="volume" type="number" placeholder="Volume in m3"/>
-      <input class="option" type="checkbox" placeholder="Deductible option"/>
-    </div>
-    <button id="compute">Compute</button>
-    <div id="actors"></div>
-    <script src="convargo.js"></script>
-    <script src="index.js"></script>
-  </body>
+  </nav>
+  <div id="trucker">
+    <input class="name" type="text" placeholder="Trucker name" />
+    <input class="price-by-km" type="number" placeholder="Price by km" />
+    <input class="price-by-cubic" type="number" placeholder="Price by m3" />
+  </div>
+  <div id="shipper">
+    <input class="name" type="text" placeholder="Shipper name" />
+    <input class="distance" type="number" placeholder="Distance in km" />
+    <input class="volume" type="number" placeholder="Volume in m3" />
+    <input class="option" type="checkbox" placeholder="Deductible option" />
+  </div>
+  <button id="compute">Compute</button>
+  <div id="actors"></div>
+  <script src="convargo.js"></script>
+  <script src="index.js"></script>
+</body>
+
 </html>
