--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,14 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-expand-sm">
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">Convargo</a>
       </div>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About Us</a></li>
+        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </div>
