feat(Home) : Adding a Home Page

--- a/public/about.html
+++ b/public/about.html
@@ -19,17 +19,18 @@
   <nav class="navbar navbar-expand-sm">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Convargo</a>
+        <a class="navbar-brand" href="home.html">Convargo</a>
       </div>
       <ul class="nav navbar-nav">
-        <li ><a href="index.html">Home</a></li>
-        <li class="active"><a href="#">About Us</a></li>
+        <li ><a href="index.html">Delivery</a></li>
+        <li class="active"><a href="about.html">About Us</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </div>
   </nav>
 
   <div class="about container">
+    <br>
     <p>Convargo wants to revolutionise the freight industry, by connecting shippers with truckers in real time via a web application.</p>
     <br>
     <p>The Goods freight transport sector is a key sector of the Europe (even worldwilde) economy :</p>
@@ -39,7 +40,7 @@
     <li>Under efficient: ⅓ trucks drive empty on Fance roads!</li>
     <br>
     <p>The Convargo platform allows shippers to :</p>
-    <li>Access directy to a wide range of road transport companies with available loading capacity</li>
+    <li>Access directly to a wide range of road transport companies with available loading capacity</li>
     <li>Compute and display the transport price calculated according to the best opportunities on the market at a time T</li>
     <li>Track in real-time the goods delivery</li>
     <li>Access to proof of transport and dematerialized invoices</li>
