--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,10 @@
   <nav class="navbar navbar-expand-sm">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Convargo</a>
+        <a class="navbar-brand" href="home.html">Convargo</a>
       </div>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Home</a></li>
+        <li class="active"><a href="index.html">Delivery</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
