--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body id="delivery_page">
   <nav class="navbar navbar-expand-sm">
     <div class="container">
       <div class="navbar-header">
@@ -28,21 +28,28 @@
       </ul>
     </div>
   </nav>
-  <div id="trucker">
-    <input class="name" type="text" placeholder="Trucker name" />
-    <input class="price-by-km" type="number" placeholder="Price by km" />
-    <input class="price-by-cubic" type="number" placeholder="Price by m3" />
+
+  <div class="container">
+    <h2>We need some informations to estimate the cost of your delivery</h2>
+    <br>
+    <h3>Please fill the form <h3>
+    <br>
+    <div id="trucker">
+      <input class="name" type="text" placeholder="Trucker name" />
+      <input class="price-by-km" type="number" placeholder="Price by km" />
+      <input class="price-by-cubic" type="number" placeholder="Price by m3" />
+    </div>
+    <div id="shipper">
+      <input class="name" type="text" placeholder="Shipper name" />
+      <input class="distance" type="number" placeholder="Distance in km" />
+      <input class="volume" type="number" placeholder="Volume in m3" />
+      <input class="option" type="checkbox" placeholder="Deductible option" />
+    </div>
+    <button id="compute">Compute</button>
+    <div id="actors"></div>
+    <script src="convargo.js"></script>
+    <script src="index.js"></script>
   </div>
-  <div id="shipper">
-    <input class="name" type="text" placeholder="Shipper name" />
-    <input class="distance" type="number" placeholder="Distance in km" />
-    <input class="volume" type="number" placeholder="Volume in m3" />
-    <input class="option" type="checkbox" placeholder="Deductible option" />
-  </div>
-  <button id="compute">Compute</button>
-  <div id="actors"></div>
-  <script src="convargo.js"></script>
-  <script src="index.js"></script>
 </body>
 
 </html>
