update(Delivery) : Editing the page to estimate the shipping cost

--- a/public/home.html
+++ b/public/home.html
@@ -23,9 +23,9 @@
         <a class="navbar-brand active" href="home.html">Convargo</a>
       </div>
       <ul class="nav navbar-nav">
+        <li class="active"><a href=home.html>Home</a>
         <li><a href="index.html">Delivery</a></li>
         <li><a href="about.html">About Us</a></li>
-        <li><a href="#">Contact</a></li>
       </ul>
     </div>
   </nav>
