--- a/public/about.html
+++ b/public/about.html
@@ -22,9 +22,9 @@
         <a class="navbar-brand" href="home.html">Convargo</a>
       </div>
       <ul class="nav navbar-nav">
+        <li><a href=home.html>Home</a>
         <li ><a href="index.html">Delivery</a></li>
         <li class="active"><a href="about.html">About Us</a></li>
-        <li><a href="#">Contact</a></li>
       </ul>
     </div>
   </nav>
